--- a/custom_components/tech/translations/pl.json
+++ b/custom_components/tech/translations/pl.json
@@ -33,6 +33,9 @@
           "temperature_entity": {
             "name": "{entity_name} Temperatura"
           },
+          "underfloor_temperature_entity": {
+            "name": "{entity_name} Temperatura Podłogi"
+          },
           "battery_entity": {
             "name": "{entity_name} Bateria"
           },
